mercury-workflows-sanitized/phase-4-k8s-infra/manifests-v2/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  # labels:
  #   app.kubernetes.io/component: monitoring
