mercury-workflows-sanitized/phase-4-k8s-infra/manifests-v2/n8n/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: n8n
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: n8n-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - customer1.mercury.airmanbabu.net
      secretName: n8n-tls-prod
  rules:
    - host: customer1.mercury.airmanbabu.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n # Your n8n service name
                port:
                  number: 3008 # Or whatever port your n8n service exposes
